# Trabalho-MPV-Academia

App/: main.py
App/FitManager/: config.py
App/FitManager/Functions/: ui_tools.py  usuario.py
App/FitManager/pages/: inicial.py  login.py
App/Users/: Usuario.json  Usuarios.json
apk/: .gitignore  README.md  pyproject.toml
apk/src/: main.py
apk/src/FitManager/: config.py
apk/src/FitManager/Functions/: ui_tools.py  usuario.py
apk/src/FitManager/pages/: inicial.py  login.py  treino.py
apk/src/Users/: Usuario.json  Usuarios.json
